# ChangeLog for net-dns/ez-ipupdate
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  12 May 2010; Martin Väth <martin@mvath.de>
  ez-ipupdate-3.0.11_beta8_p133-r1.ebuild -ez-ipupdate-3.0.11_beta8_p133.ebuild
  Reopen socket every time under linux (keeping it open is not reliable).
  Bump to force upgrade.

  03 Apr 2010; Martin Väth <martin@mvath.de>
  Copy from http://bugs.gentoo.org/show_bug.cgi?id=288275
  Add ez-ipupdate-linux.patch to make it work with iproute2/dhcpcd