@@ -1,9 +1,9 @@
 AUX ez-ipupdate-3.0.11_beta8-3322.diff 1881 RMD160 5e8177d418cbc2f654c9a97d4f671796d2484494 SHA1 9355723833ef85cf7cdeb8fdb96adc37e52764db SHA256 ee7b5a1bc9807a0b6e1b5885c5a757d73b8aa083f8f1f610d7346b83b9ab6554
 AUX ez-ipupdate-3.0.11_beta8-dnsexit.diff 6721 RMD160 e8b018e0fca9506c905a021cb1c101c9a5372156 SHA1 32c6999ae07129a6db8bf4d3758deebf1cae00bd SHA256 beb76bd1362bee077d90b67ec8c7251d13b5c08e2d565d8ffb3f000f48a41198
-AUX ez-ipupdate-linux.diff 5633 RMD160 7014d5e15d83028a914a20232b88fc7dc37ca32f SHA1 95b0bf317665acc85c4b71486a3f6d3ed9ea6b80 SHA256 b567ccecc5883ebadbc307dca318b41a1a30a77718cbffd105129f4de1352dfe
+AUX ez-ipupdate-linux.diff 5800 RMD160 1f8919f68c132285cf0a2d677c5aff74bf30fe8e SHA1 e13edb3d3d2c736fd48b5644cfc28106bfffac5b SHA256 d3af62f0bbb09a971ea6fc46891fa4734b1617c5ef5f3266e9334eb9a81a9ad4
 AUX ez-ipupdate.initd 2660 RMD160 9df544e6d6e93f2938438906d475f606bbfa0246 SHA1 d0cb27d3a5f4c7f08ee954526cda81975cf05d88 SHA256 0cedee45e46cfd2e6ee3ebb5a30fe2f1a39d550d580c91d29f5b1a3f2a61577c
 DIST ez-ipupdate_3.0.11b8-13.3.diff.gz 154094 RMD160 8d30768872fd5579b8cb0f671d2e6f756e1605d7 SHA1 800aec0da7313301e71897b5d37492616808db57 SHA256 2c058941f8b172c8564d841d4413b7fa7a5c4dbd53d7d5574c2ff58f41cf39b3
 DIST ez-ipupdate_3.0.11b8.orig.tar.gz 81975 RMD160 f193969c5d3c9faa1b6fec41d530557614d62c55 SHA1 bcb0b919067bb235bd195936e85ceca90b4323c0 SHA256 bf5b8d11ffe055c5891d0ab64bbfa86e99cbda645d40f346146b939fec8d962d
-EBUILD ez-ipupdate-3.0.11_beta8_p133-r1.ebuild 3188 RMD160 98d3446b24f347b1e2c86a24a5580283cace8855 SHA1 a8a64b12aadc3abdfe28c14c869bcd5afeacacb6 SHA256 bafe98e62c5c4d9eddb3893815ce905f5eb038428edee076d40581d0c800de48
-MISC ChangeLog 635 RMD160 a6653d1f23e79161701950bc8e6887f64878653f SHA1 e85114577de4f9b92a45b31f461f64c36c590af4 SHA256 4a04fde12d0630926e8cbbbb49c7afde85408bd22375fd1074e2925b9634bc38
+EBUILD ez-ipupdate-3.0.11_beta8_p133-r2.ebuild 3277 RMD160 a769dbf4803b806269cbca550dbe0e87418cfd52 SHA1 ce7ae8753374d5db17290f50b78cb82186f7d5e7 SHA256 953b407bf208437285121aed18e0d83ef362ee2ec3eacc4206e4c902e33c9938
+MISC ChangeLog 761 RMD160 a34b95b923d86e424f11260bf08d9026d4d7cc46 SHA1 a3c137723a1a942b0f48cccefcd013cf51450659 SHA256 8e52ceee5d5e4636e3307812e9563db8340aa914081f12cd2c7c7b4082bf62f8
 MISC metadata.xml 579 RMD160 b0aed585f056edb819dd83cd067ffa4846c52629 SHA1 c4dee3b0a044bd51c447cca8f8d124802d990045 SHA256 d63745c9f67167e17fa80d7ccd5b09990f878fe2eeefdaf4d5ea0bc5ebc8a4b2
