@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+  19 Jan 2011; Martin Väth <martin@mvath.de>
+  Bump to fix compilation problems with linux-headers-2.6.35
+
   03 Jan 2011; Martin Väth <martin@mvath.de>
   Bump to EAPI=4.
 
